--- a/spring-boot-server-runner/pom.xml
+++ b/spring-boot-server-runner/pom.xml
@@ -13,8 +13,24 @@
     <artifactId>spring-boot-server-runner</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    <dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>2.0.1.RELEASE</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 
+    <dependencies>
         <dependency>
             <groupId>spring-boot-server</groupId>
             <artifactId>spring-boot-server-api-binance</artifactId>
