--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,8 @@
 
     <properties>
         <java.version>1.8</java.version>
+        <junit.version>4.9</junit.version>
+        <mockito.version>2.7.22</mockito.version>
     </properties>
 
 
