--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <version>2.0.1.RELEASE</version>
     </parent>
 
+    <groupId>spring-boot-server</groupId>
     <artifactId>spring-boot-server</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
